--- a/about.html
+++ b/about.html
@@ -52,12 +52,13 @@
 <div class="team-section">
     <div class="team-member">
         <img src="image/Shahzaib.jpg" width="300">
-        <h3>Shahzaib</h3>
+        <h3>Shahzaib Awan</h3>
     </div>
 
     <div class="team-member">
         <img src="image/Tashif.JPG" width="300">
-        <h3>Tashif</h3>
+        <h3>Tashif Javid</h3>
     </div>
 
 </div>
+
