--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <a href="home.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href="Quiz.html">Quiz</a>
+        <a href="index.html">Quiz</a>
     </nav>
 
     <h2>SHT BrainBusters</h2>
@@ -26,4 +26,5 @@
     </div>
 
 </body>
+
 </html>
