--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <nav>
         <a href="home.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href="Quiz.html">Quiz</a>
+        <a href="index.html">Quiz</a>
     </nav>
 
     <div class="hero">
@@ -21,3 +21,4 @@
 
 </body>
 </html>
+
