--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <nav>
         <a href="home.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href="Quiz.html">Quiz</a>
+        <a href="index.html">Quiz</a>
     </nav>
 
     <div class="content-box">
@@ -59,4 +59,5 @@
         <img src="image/Tashif.JPG" width="300">
         <h3>Tashif</h3>
     </div>
+
 </div>
