Add new team member 'Hassan' to About Us
Added a new team member 'Hassan' to the About Us page.

--- a/about.html
+++ b/about.html
@@ -60,4 +60,9 @@
         <h3>Tashif</h3>
     </div>
 
+    <div class="team-member">
+        <img src="image/Hassan.jpg" width="300">
+        <h3>Hassan</h3>
+    </div>
 </div>
+
